[lworld] TestLWorld::test63 fails with "no exception thrown"

XMLWordPrintable

       stderr: [Exception in thread "main" java.lang.reflect.InvocationTargetException
      at jdk.internal.reflect.GeneratedMethodAccessor41.invoke(Unknown Source)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:565)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:726)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:418)
      at compiler.valhalla.valuetypes.TestLWorld.main(TestLWorld.java:61)
      Caused by: java.lang.RuntimeException: test63 failed: no exception thrown
      at compiler.valhalla.valuetypes.TestLWorld.test63_verifier(TestLWorld.java:1699)
      ... 6 more

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: