8242454: [lworld] TestLWorld::test63 fails with "no exception thrown"